# declarativex

./: .coveragerc  .flake8  .gitguardian.yaml  .gitignore  .pylintrc  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-environment/: action.yml
.github/workflows/: annotate-flake8.py  annotate-mypy.py  annotate-pylint.py  production.yml  publish.yml  pull-request.yml
api/exceptions/: index.html
api/models/: index.html
compatibility/: index.html
contributing/: index.html
core-concepts/auth/: index.html
core-concepts/auto-retry/: index.html
core-concepts/base-client/: index.html
core-concepts/dependencies/: index.html
core-concepts/error-mappings/: index.html
core-concepts/graphql/: index.html
core-concepts/http-declaration/: index.html
core-concepts/middlewares/: index.html
core-concepts/rate-limiter/: index.html
docs/: Contributing.md  compatibility.md  contributing.md  index.md  license.md  testing.md
docs/Core_Concepts/: BaseClient.md  Declaration.md  Parameters-hidden.md  Parameters.md
docs/api/: exceptions.md  models.md
docs/core-concepts/: Parameters-hidden.md  _declare-parameters.md  auth.md  auto-retry.md  base-client.md  declaration.md  dependencies.md  error-mappings.md  exceptions.md  graphql.md  http-declaration.md  middlewares.md  rate-limiter.md
docs/stylesheets/: extra.css
javascripts/: extra.js
license/: index.html
search/: search_index.json
src/declarativex/: __init__.py  auth.py  client.py  compatibility.py  decorators.py  dependencies.py  exceptions.py  executors.py  graphql.py  helpers.py  methods.py  middlewares.py  models.py  rate_limiter.py  request.py  response.py  retry.py  utils.py  validation.py  warnings.py
src/declarativex/pydantic/: __init__.py
testing/: index.html
tests/: conftest.py  test_async_clients.py  test_authentication.py  test_client.py  test_compatibility.py  test_dependencies.py  test_exceptions.py  test_graphql.py  test_middlewares.py  test_rate_limiter.py  test_retry.py  test_sync_clients.py  test_type_hints.py
tests/app/: main.py  schemas.py
tests/fixtures/: __init__.py  clients.py  models.py
tests/fixtures/clients/: __init__.py  async_client.py  sync_client.py
tests/fixtures/middlewares/: dummy.py
tests/fixtures/schemas/: __init__.py  dataclass.py  pydantic.py
