[tool.poetry]
name = "declarativex"
version = "1.0.0"
description = "Declarative HTTP client for Python"
authors = ["Vladyslav Halatskyi <xfloydya@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = 'https://github.com/floydya/declarativex'
Documentation = 'https://floydya.github.io/declarativex'
Funding = 'https://ko-fi.com/floydya'
Source = 'https://github.com/floydya/declarativex'

[tool.poetry.dependencies]
python = ">=3.9,<4"
httpx = "^0.25.0"
pydantic = ">1,<3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^2.17.5"
pytest = "^7.4.1"
pytest-asyncio = "^0.21.0"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
types-setuptools = "^68.1.0.1"
mkdocs-material = "^9.2.8"
markdown-include = "^0.8.1"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
